完成了个人中心开发

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">个人头像</a></dd>
-                        <dd><a href="">修改密码</a></dd>
+                        <dd><a href="./user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="./user/user_avatar.html" target="fm">个人头像</a></dd>
+                        <dd><a href="./user/user_pwd.html" target="fm">修改密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="javascript:;" id="btnLogout">
@@ -62,9 +62,12 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-pinglun"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-list"></i> 基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-list"></i> 更换头像</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-list"></i> 重置密码</a></dd>
+                            <dd><a href="./user/user_info.html" target="fm"><i class="layui-icon layui-icon-list"></i>
+                                    基本资料</a></dd>
+                            <dd><a href="./user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-list"></i>
+                                    更换头像</a></dd>
+                            <dd><a href="./user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-list"></i>
+                                    重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
@@ -83,7 +86,6 @@
     </div>
     <script src="./assets/lib/layui/layui.all.js"></script>
     <script src="./assets/lib/jquery.js"></script>
-    <script src="./assets/lib/layui/layui.all.js"></script>
     <script src="./assets/js/baseAPI.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
